[metadata]
name = feast_learn
version = 0.0.0
description = Messing around with feast
long_description = file: README.md

[options]
include_package_data = True
packages = find_namespace:
install_requires =
  feast

[options.extras_require]
dev =
  black==20.8b1
  pytest
  flake8
  mypy
  pytest-watch
